this is the commit when i finish the student assignment page

--- a/frontend/src/Components/Student/Submit/Submit.css
+++ b/frontend/src/Components/Student/Submit/Submit.css
@@ -1,4 +1,4 @@
-.login{
+.submit{
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -10,13 +10,13 @@
     margin-top: 50px;
     border-radius: 50px;
 }
-.login h1{
+.submit h1{
     border-bottom: 2px solid gray;
     width: 100%;
     padding-bottom: 10px;
     text-align: center;
 }
-.login form{
+.submit form{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,7 +24,7 @@
     gap: 30px;
     width: 100%;
 }
-.login form div{
+.submit form div{
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -32,17 +32,17 @@
     width: 100%;
     gap: 10px;
 }
-.login form div input{
-    width: 100%;
+.submit form div input{
+        width: 100%;
     padding: 10px;
     border: none;
     background-color: white;
     border-bottom: 2px solid gray;
 }
-.login form div input:focus{
-    border-bottom: 2px solid gray;
+.submit form div input:focus{
+    box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.5);
 }
-.login button{
+.submit button{
     width: 100px;
     height: 40px;
     border-radius: 50px;
@@ -51,32 +51,34 @@
     background-color: salmon;
 }
 @media(min-width:960px){
-    .login{
+    .submit{
     margin-top: 100px;
     gap: 100px;
 }
-.login h1{
+.submit h1{
     font-size: 45px;
 }
-.login form{
+.submit form{
     gap: 80px;
 }
-.login form label{
+.submit form label{
     font-size: 22px;
 
 }
-.login form input{
+.submit form input{
     height: 60px;
 }
-.login button{
+.submit button{
     width: 200px;
     height: 60px;
     font-size: 22px;
 }
+.file input{
+    font-size: 22px;
+}
 }
 @media(min-width:1125px){
-    .login{
-        
+    .submit{
         margin: 50px auto;
         width: 80%;
         
